# pr-intelligence

./: .gitignore  ASYNC_OPTIMIZATION.md  README.md  benchmark_api.py  pyproject.toml  run.sh  test_integration.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  SELF_REVIEW.md  TROUBLESHOOTING.md  WORKTREE_MODE.md  agent-build.md  multi-repo-support-plan.md  pr-attention-analysis-design.md
docs/design/: agent-build.md  minimal_agent_orchestrator.html  spec_agentic_pr_system.md
skills/polaris-attention-analysis/: skill.md
skills/polaris-pr-review/: skill.md
skills/polaris-report-analysis/: skill.md
src/polaris_pr_intel/: __init__.py  config.py  ingest.py  main.py  models.py  refresh.py  time_utils.py
src/polaris_pr_intel/agents/: __init__.py  daily_reporter.py  derived_analysis.py  issue_insight.py  pr_reviewer.py  pr_summarizer.py  review_need.py
src/polaris_pr_intel/api/: app.py  ui.py
src/polaris_pr_intel/git/: __init__.py  repo_manager.py  worktree_manager.py
src/polaris_pr_intel/github/: _snapshots.py  async_client.py  client.py
src/polaris_pr_intel/graphs/: daily_report_graph.py  event_graph.py  pr_review_graph.py  state.py
src/polaris_pr_intel/llm/: __init__.py  _base_local_cli.py  _claude_code_local.py  _codex_local.py  _heuristic.py  _utils.py  adapters.py  base.py  factory.py  llm_adapter.py
tests/: test_api.py  test_event_graph.py  test_git_integration.py  test_github_client.py  test_llm_adapters.py  test_llm_public_api.py  test_main.py  test_scoring.py  test_store_sqlite.py
(+10 files in other folders)
