[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris-pr-intel"
version = "0.1.0"
description = "PR intelligence service for apache/polaris"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn>=0.30.0,<0.31.0",
  "httpx>=0.27.0,<0.28.0",
  "pydantic>=2.9.0,<3.0.0",
  "langgraph>=0.2.50,<0.3.0",
  "apscheduler>=3.10.4,<4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
polaris-pr-intel = "polaris_pr_intel.main:main"
